[package]
name = "async_std_stun_turn"
version = "0.1.0"
authors = ["carslaw <hugh.carslaw@btinternet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
enum-map = "0.6"
itertools = "0.10.0"
http = "0.2.3"
rand = "0.8.3"
stun_codec = "0.1.13"
bytecodec = "0.4.13"
async-trait = "0.1.42"
stringprep = "0.1.2"

[dependencies.async-std]
version = "1.9.0"
features = ["attributes", "unstable"]